
 1.4) Make sure the ROM scanner works with
      "Metadata scan policy" set to "NFO files + Scrapers" and "Asset scan policy" set to "Local images"

 2) Fix the context menu metadata scraper:
 
 3) Is it possible to scrape individual metadata components??? Think about this.

 4) Asset scraper ...


[B]Advanced Emulator Launcher | version 0.9.8 | XX June 2019[/B]

FEATURE  New ROMs artwork type 3D Boxes, asked by Rufoo.

FEATURE  [SCRAPERS] Copy scraper stuff from master branch by Chrisism.

WIP NOW  [SCRAPERS] Fix MobyGames scraper and use new API.
         See http://www.mobygames.com/info/api

WIP      [SCRAPERS] Fix TheGamesDB scraper. There has been a change in the web site including
         a new API. I'm not sure wether AEL will need an API key.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/75

WIP      [CORE] Support for Advanced MAME Launcher exported virtual launchers.
         This feature requires AML 0.9.X
         AML creates the Category "Arcade (AML)" and places the exported launchers there.

WIP      [CORE] New properties to notify skins about Std launchers, ROM launchers, Categories,
         and number of items in a Launcher.

WIP      [CORE] Option to clean dead ROMs in "Recently played ROMs" and "Most played ROMs"

WIP      [CORE] Option to clean individual ROMs in "Recently played ROMs" and "Most played ROMs"

WIP      [CORE] Create a couple of new ROM context menus, "Manage Recently played ROM" and 
         "Manage Most played ROM". Both will have the following options: "Delete this ROM",
         "Delete all Unlinked/Broken ROMs".
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2698811#pid2698811

FEATURE  [CORE] Add Year and Developer for Categories.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2688653#pid2688653

FEATURE  [CORE] Per-launcher setting to disable multi-disc ROM support.
